minor fixes on mobile index page

--- a/public/css/flex_sm.css
+++ b/public/css/flex_sm.css
@@ -23,7 +23,7 @@
     position: fixed;
     top:0;
     transition: all 0.2s ease;
-    height: 85px;
+    height: 65px;
     width: 100%;
     border: none;
     background: none;
@@ -64,6 +64,10 @@
     width: 20%;
   }
 
+    .mobile_logo img {
+      height: 42px;
+    }
+
   .mobile_top_contact {
     width: 40%;
   }
@@ -90,8 +94,13 @@
     margin: 3px 0;
   }
 
+    .mobile_top_contact a i {
+      color: #e18a07;
+      margin-right: 3px;
+    }
+
   .stellarnav .fa-bars {
-    font-size: 2.1em;
+    font-size: 1.8em;
     font-weight: 400;
     vertical-align: middle;
     color: rgba(230, 230, 230,0.8);
